// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kafka API metadata: fetch all topics 1`] = `"AAAAQwAAAAUAAAABAAABTQAJbG9jYWxob3N0AAAiUwAAAAEAAAAKdGVzdC10b3BpYwAAAAEAAAAAAAAAAAFNAAAAAAAAAAA="`;

exports[`Kafka API metadata: fetch all topics 2`] = `
Object {
  "brokers": Array [
    Object {
      "host": "localhost",
      "nodeId": 333,
      "port": 8787,
    },
  ],
  "topics": Array [
    Object {
      "errorCode": 0,
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "isrNodes": Array [],
          "leaderId": 333,
          "partitionIndex": 0,
          "replicaNodes": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Kafka API metadata: fetch nonexistent topic 1`] = `"AAAAMgAAAAUAAAABAAABTQAJbG9jYWxob3N0AAAiUwAAAAEAAwALb3RoZXItdG9waWMAAAAA"`;

exports[`Kafka API metadata: fetch nonexistent topic 2`] = `
Object {
  "brokers": Array [
    Object {
      "host": "localhost",
      "nodeId": 333,
      "port": 8787,
    },
  ],
  "topics": Array [
    Object {
      "errorCode": 3,
      "name": "other-topic",
      "partitions": Array [],
    },
  ],
}
`;

exports[`Kafka API metadata: fetch specific topic 1`] = `"AAAAQwAAAAUAAAABAAABTQAJbG9jYWxob3N0AAAiUwAAAAEAAAAKdGVzdC10b3BpYwAAAAEAAAAAAAAAAAFNAAAAAAAAAAA="`;

exports[`Kafka API metadata: fetch specific topic 2`] = `
Object {
  "brokers": Array [
    Object {
      "host": "localhost",
      "nodeId": 333,
      "port": 8787,
    },
  ],
  "topics": Array [
    Object {
      "errorCode": 0,
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "isrNodes": Array [],
          "leaderId": 333,
          "partitionIndex": 0,
          "replicaNodes": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Kafka API metadata: fetch specific topic and nonexistent topic 1`] = `"AAAAVgAAAAUAAAABAAABTQAJbG9jYWxob3N0AAAiUwAAAAIAAAAKdGVzdC10b3BpYwAAAAEAAAAAAAAAAAFNAAAAAAAAAAAAAwALb3RoZXItdG9waWMAAAAA"`;

exports[`Kafka API metadata: fetch specific topic and nonexistent topic 2`] = `
Object {
  "brokers": Array [
    Object {
      "host": "localhost",
      "nodeId": 333,
      "port": 8787,
    },
  ],
  "topics": Array [
    Object {
      "errorCode": 0,
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "isrNodes": Array [],
          "leaderId": 333,
          "partitionIndex": 0,
          "replicaNodes": Array [],
        },
      ],
    },
    Object {
      "errorCode": 3,
      "name": "other-topic",
      "partitions": Array [],
    },
  ],
}
`;

exports[`Kafka API produce: send multiple message batches to one partiton 1`] = `"AAAAJwAAAAUAAAABAAtvdGhlci10b3BpYwAAAAEAAAPnAAAAAAAAAAAAAA=="`;

exports[`Kafka API produce: send multiple message batches to one partiton 2`] = `
Object {
  "topics": Array [
    Object {
      "name": "other-topic",
      "partitions": Array [
        Object {
          "baseOffset": 0n,
          "errorCode": 0,
          "index": 999,
        },
      ],
    },
  ],
}
`;

exports[`Kafka API produce: send multiple message batches to one partiton 3`] = `"AAAAJwAAAAYAAAABAAtvdGhlci10b3BpYwAAAAEAAAPnAAAAAAAAAAAAAw=="`;

exports[`Kafka API produce: send multiple message batches to one partiton 4`] = `
Object {
  "topics": Array [
    Object {
      "name": "other-topic",
      "partitions": Array [
        Object {
          "baseOffset": 3n,
          "errorCode": 0,
          "index": 999,
        },
      ],
    },
  ],
}
`;

exports[`Kafka API produce: send one message to one partiton 1`] = `"AAAAJgAAAAUAAAABAAp0ZXN0LXRvcGljAAAAAQAAAU0AAAAAAAAAAAAA"`;

exports[`Kafka API produce: send one message to one partiton 2`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "baseOffset": 0n,
          "errorCode": 0,
          "index": 333,
        },
      ],
    },
  ],
}
`;
